Various cleanups of super old code. This would need a lot more cleanup, as well as tests, but not much time or use for this right now